--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,9 +37,10 @@ dev_dependencies:
     sdk: flutter
 
 flutter_icons:
-  android: "launcher_icon"
+  android: true
   ios: true
-  image_path: "assets/images/logo.png"
+  remove_alpha_ios: true
+  image_path: "assets/images/logo1.png"
 
 flutter:
 
@@ -54,5 +55,7 @@ flutter:
     - family: arabicJana
       fonts:
         - asset: assets/Janna.ttf
+
+
 
 
